// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIndicator component renders correctly 1`] = `
<LoadingIndicatorStyled
  className="centered font-bold"
>
  <div>
    <LoadingSpinner>
      <LoadingSpinnerBounce />
      <LoadingSpinnerBounce />
      <LoadingSpinnerBounce />
    </LoadingSpinner>
    <React.Fragment>
      Loading…
    </React.Fragment>
  </div>
</LoadingIndicatorStyled>
`;

exports[`LoadingIndicator component renders correctly without 'loading' text 1`] = `
<LoadingIndicatorStyled
  className="centered font-bold"
>
  <div>
    <LoadingSpinner>
      <LoadingSpinnerBounce />
      <LoadingSpinnerBounce />
      <LoadingSpinnerBounce />
    </LoadingSpinner>
  </div>
</LoadingIndicatorStyled>
`;
